--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
   </head>
   <body>
-    <p>lol</p>
+    <div class="container">
+      <ul class="card-set">
+        <li>
+          <h2 class="item">lol</h2>
+        </li>
+        <li>
+          <h2 class="item">lol2</h2>
+        </li>
+        <li>
+          <h2 class="item">lol3</h2>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
